--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.asus.onlyu">
-    <!--配置权限的区域-->
-    <!--网络-->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!--读SD卡-->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <!-- 配置权限的区域 -->
+    <!-- 网络 -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <!-- 读SD卡 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
         android:name=".appliaction.MyAppliacton"
         android:allowBackup="true"
@@ -20,15 +22,24 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <!--Activity的区域-->
-        <activity android:name=".module.merchant.Shopping_Activity"></activity>
-        <!-- 商品详情的页面-->
-        <activity android:name=".module.merchant.DetailsActivity"></activity>
+        <!-- Activity的区域 -->
+        <activity android:name=".module.merchant.Shopping_Activity"/>
+        <!-- 商品详情的页面 -->
+        <activity android:name=".module.merchant.DetailsActivity"/>
 
-        <meta-data android:name="design_width" android:value="768">
+        <meta-data
+            android:name="design_width"
+            android:value="720">
         </meta-data>
-        <meta-data android:name="design_height" android:value="1280">
+        <meta-data
+            android:name="design_height"
+            android:value="1280">
         </meta-data>
+
+        <activity android:name=".module.shoppingcar.OrderActivity">
+        </activity>
+        <activity android:name=".module.shoppingcar.AddressActivity">
+        </activity>
     </application>
 
 </manifest>
