程千浪0707第二次提交测试

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,8 @@
         </activity>
         <activity android:name=".module.shoppingcar.order.AllOrderActivity">
         </activity>
+        <activity android:name=".module.home.view.Home_NFC_activity">
+        </activity>
     </application>
 
 </manifest>
