--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,33 +24,35 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
     //黄油刀配置
-    compile 'com.jakewharton:butterknife:8.5.1'
-    apt 'com.jakewharton:butterknife-compiler:8.5.1'
     //Autolayout屏幕适配
-    compile 'com.zhy:autolayout:1.4.5'
     //okhttputlis依赖
-    compile 'com.squareup.okhttp3:okhttp:3.7.0'
     //拦截器依赖
-    compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     //gson解析的依赖
-    compile 'com.google.code.gson:gson:2.8.0'
     //Glide图片的依赖
-    compile 'com.github.bumptech.glide:glide:3.8.0'
     //倒5.0之后的新特性
-    compile 'com.android.support:design:26.0.0-alpha1'
+    
 
     compile project(':utilcode2')
     //EvevtBus的依赖
-    compile 'org.greenrobot:eventbus:3.0.0'
     //网络请求的library包
     compile project(':retrofitlibrary')
     //Cradview的依赖
-    compile 'com.android.support:cardview-v7:22.2.1'
     //xrecycleview
-    compile 'com.jcodecraeer:xrecyclerview:1.2.6'
     //banner
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.jakewharton:butterknife:8.5.1'
+    compile 'com.zhy:autolayout:1.4.5'
+    compile 'com.squareup.okhttp3:okhttp:3.7.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
+    compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.android.support:cardview-v7:22.2.1'
+    compile 'com.jcodecraeer:xrecyclerview:1.2.6'
     compile 'com.youth.banner:banner:1.4.2'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
+    apt 'com.jakewharton:butterknife-compiler:8.5.1'
 }
